infra/dashboard/templates/dashboard-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-ingress
spec:
  routes:
    - match: Host(`dash.rooty.dev`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 80
    - match: "Host(`dash.rooty.dev`) && PathPrefix(`/outpost.goauthentik.io/`)"
      kind: Rule
      priority: 15
      services:
        - kind: Service
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          name: ak-outpost-traefik-outpost
          namespace: authentik
          port: 9000
  tls:
    secretName: rooty-dev-wildcard
